--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#Skill_Section">Skills</a></li>
                 <li><a href="#Contact_Section">Contact Me</a></li>
             </ul>
+            <div id="menu-btn" class="fas fa-bars"></div>
         </nav>
         <div class="detail">
             <h4>Hello, My name is  </h4>
@@ -198,5 +199,8 @@
         </div>
         <p class="end">Copyright by Shoundik</p>
     </footer>
+    <script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js">
+    </script>
 </body>
 </html>
