--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
         </div>
         <p class="end">Copyright by Shoundik</p>
     </footer>
-    <script>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js">
-    </script>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 </html>
